tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0187/input.js
function hello() {'use strict'; try { } catch (eval) { } }
